# CompilersCourse

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  reqs-draft.md
02-parsers/: CMakeLists.txt  driver.cpp  driver.hh  main.cpp  parser.y  scanner.h  scanner.l
03-parsers-with-ast/: CMakeLists.txt  Program.cpp  Program.h  driver.cpp  driver.hh  main.cpp  parser.y  scanner.l
03-parsers-with-ast/assignments/: Assignment.cpp  Assignment.h  AssignmentList.cpp  AssignmentList.h
03-parsers-with-ast/expressions/: AddExpression.cpp  AddExpression.h  DivExpression.cpp  DivExpression.h  Expression.h  IdentExpression.cpp  IdentExpression.h  MulExpression.cpp  MulExpression.h  NumberExpression.cpp  NumberExpression.h  PowerExpression.cpp  PowerExpression.h  SubstractExpression.cpp  SubstractExpression.h
04-visitors/: CMakeLists.txt  Program.cpp  Program.h  driver.cpp  driver.hh  main.cpp  parser.y  scanner.l
04-visitors/assignments/: Assignment.h  AssignmentList.cpp  AssignmentList.h  PrintStatement.h  Statement.h
04-visitors/base_elements/: BaseElement.h
04-visitors/expressions/: AddExpression.cpp  Expression.h  IdentExpression.h  MulExpression.cpp  NumberExpression.h
04-visitors/visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  Visitor.h  elements.h  forward_decl.h
05-variable-scopes/: CMakeLists.txt  Program.cpp  Program.h  driver.cpp  parser.y  scanner.l
05-variable-scopes/assignments/: Assignment.h  AssignmentList.h
05-variable-scopes/expressions/: AddExpression.h  DivExpression.cpp  DivExpression.h  IdentExpression.cpp  SubstractExpression.h
05-variable-scopes/objects/: Integer.h  Object.cpp  Object.h  UninitObject.h
05-variable-scopes/statements/: Assignment.cpp  AssignmentList.cpp  AssignmentList.h  ScopeAssignmentList.h
05-variable-scopes/symbol_table/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h
05-variable-scopes/visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.h  Visitor.h  elements.h  forward_decl.h
06-function-calls/: CMakeLists.txt  Frame.cpp  driver.cpp  main.cpp
06-function-calls/function-mechanisms/: Frame.cpp  Frame.h
06-function-calls/grammar/: CMakeLists.txt  Program.cpp  Program.h  parser.y  scanner.l
06-function-calls/grammar/expressions/: DivExpression.cpp  FunctionCallExpression.h  MulExpression.cpp  MulExpression.h  NumberExpression.cpp  SubstractExpression.cpp
06-function-calls/grammar/functions/: Function.cpp  Function.h  FunctionList.cpp  FunctionList.h  ParamList.cpp
06-function-calls/grammar/statements/: FunctionCallStatement.cpp  FunctionCallStatement.h  ReturnStatement.cpp  ScopeAssignmentList.h  Statement.h
06-function-calls/include/visitors/: Visitor.h  forward_decl.h
06-function-calls/symbol_table/: ScopeLayer.cpp  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.h
06-function-calls/types/: Integer.cpp  Integer.h  PrimitiveType.cpp  Type.cpp
06-function-calls/visitors/: FunctionCallVisitor.cpp  FunctionCallVisitor.h  Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  elements.h
07-irtree-build/: CMakeLists.txt  driver.cpp
07-irtree-build/function-mechanisms/: FrameEmulator.cpp  FrameTranslator.cpp  FunctionStorage.h  FunctionTable.h
07-irtree-build/function-mechanisms/address/: Address.h  AddressInFrame.h  AddressInRegister.cpp  AddressInRegister.h
07-irtree-build/grammar/: CMakeLists.txt  Program.cpp  parser.y  scanner.l
07-irtree-build/grammar/expressions/: AddExpression.cpp  AndExpression.h  DivExpression.h  FunctionCallExpression.cpp  LtExpression.h  NotExpression.h  OrExpression.cpp
07-irtree-build/grammar/functions/: Function.h  ParamList.h  ParamValueList.h
07-irtree-build/grammar/statements/: AssignmentList.h  IfStatement.cpp  IfStatement.h  VarDecl.cpp
07-irtree-build/include/: driver.hh
07-irtree-build/include/visitors/: Visitor.h  forward_decl.h
07-irtree-build/irtree/: CMakeLists.txt
07-irtree-build/irtree/generators/: Label.h  Temporary.cpp  Temporary.h
07-irtree-build/irtree/nodes/: BaseElement.h
07-irtree-build/irtree/visitors/: BaseElements.h  (+3 more)
07-irtree-build/symbol_table/: Table.cpp
07-irtree-build/types/: FunctionType.cpp  FunctionType.h  Type.h  UninitObject.cpp
07-irtree-build/visitors/: FunctionCallVisitor.cpp  FunctionCallVisitor.h  Interpreter.cpp  Interpreter.h  IrtreeBuildVisitor.cpp  IrtreeBuildVisitor.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp
2021/: CMakeLists.txt  driver.cpp
2021/grammar/: CMakeLists.txt  Program.cpp  Program.h
2021/scopes/: scopes.md
2021/symbols/: BaseSymbol.h  StArgument.h  StVariable.h
2021/visitors/: MainInterpreter.h  PrintVisitor.h  SymbolTableVisitor.cpp  TemplateVisitor.cpp  TemplateVisitor.h
2022/: CMakeLists.txt  driver.cpp  main.cpp  test_ir.cpp  test_scope.cpp  test_types.cpp
2022/grammar/: CMakeLists.txt  Program.cpp  Program.h  parser.y  scanner.l
2022/include/: driver.hh
2022/scopes/: BaseScope.cpp  BaseScope.h
2022/symbols/: BaseSymbol.cpp  BaseSymbol.h  Function.cpp  Function.h  StArgument.cpp  StFunction.cpp  StFunction.h  StVariable.cpp  VariableSymbol.cpp  VariableSymbol.h
2022/visitors/: IrGeneratorVisitor.cpp  IrGeneratorVisitor.h  MainInterpreter.cpp  PrintVisitor.cpp  SymbolTableVisitor.cpp  SymbolTableVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  elements.h
2024/: .gitignore  Arithmetics.g4  Arithmetics.interp  ArithmeticsBaseListener.cpp  ArithmeticsBaseListener.h  ArithmeticsLexer.cpp  ArithmeticsLexer.h  ArithmeticsLexer.interp  ArithmeticsLexer.tokens  ArithmeticsListener.cpp  ArithmeticsListener.h  ArithmeticsParser.cpp  ArithmeticsParser.h  CMakeLists.txt  main.cpp
2024/.antlr/: Arithmetics.interp  ArithmeticsLexer.interp  ArithmeticsLexer.java  ArithmeticsParser.java
2024/IR/: CMakeLists.txt  test_ir.cpp
2024/symbol_table/: main_symbol.cpp
(+216 files in other folders)
